--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: BloodyCosmetics
 authors: ["Vanic"]
 description: BloodyCosmetics
-api: [4.0.0]
-version: 1.2.0
+api: [5.0.0]
+version: 1.5.0+dev
 main: Vanic\Bloody\Cosmetics\Main
 load: POSTWORLD
